@@ -24,7 +24,7 @@
 			</Button>
 			<CheckButton name="HMPDisableAllCB" inherits="UICheckButtonTemplate" text="CheckButton1">
 				<Anchors>
-					<Anchor point="BOTTOM" relativeTo="HMPOptionsFrame" x="200" y="286" />
+					<Anchor point="BOTTOM" relativeTo="HMPOptionsFrame" x="-240" y="282" />
 				</Anchors>
 			</CheckButton>
 			<CheckButton name="HMPAdvMapsCB" inherits="UICheckButtonTemplate" text="CheckButton1">
@@ -141,15 +141,15 @@
 				<FontString name="HMPTitleText" inherits="GameFontNormal" font="Fonts\2002B.ttf" text="HelpMePlay" justifyH="CENTER" justifyV="CENTER">
 					<Size x="101" y="20" />
 					<Anchors>
-						<Anchor point="CENTER" relativeTo="HMPOptionsFrame" relativePoint="CENTER" x="-210" y="130" />
+						<Anchor point="CENTER" relativeTo="HMPCRText" relativePoint="CENTER" x="0" y="22" />
 					</Anchors>
 					<FontHeight val="15" />
 					<Color r="0" g="1" b="1" />
 				</FontString>
-				<FontString name="HMPVersionText" inherits="GameFontNormal" text="1.0.10" justifyH="CENTER" justifyV="CENTER">
+				<FontString name="HMPVersionText" inherits="GameFontNormal" text="1.1.2" justifyH="CENTER" justifyV="CENTER">
 					<Size x="80" y="20" />
 					<Anchors>
-						<Anchor point="LEFT" relativeTo="HMPDisableAllCB" relativePoint="LEFT" x="10" />
+						<Anchor point="RIGHT" relativeTo="HMPOptionsFrameCloseButton" relativePoint="RIGHT" x="-10" y="3" />
 					</Anchors>
 					<FontHeight val="12" />
 					<Color r="1" g="1" b="1" />
@@ -157,7 +157,7 @@
 				<FontString name="HMPDisableAllText" inherits="GameFontNormal" font="Fonts\2002B.ttf" text="Disable All" justifyH="CENTER" justifyV="CENTER">
 					<Size x="80" y="20" />
 					<Anchors>
-						<Anchor point="RIGHT" relativeTo="HMPDisableAllCB" relativePoint="RIGHT" x="-25" />
+						<Anchor point="LEFT" relativeTo="HMPDisableAllCB" relativePoint="LEFT" x="22" />
 					</Anchors>
 					<FontHeight val="12" />
 					<Color r="1" g="1" b="1" />
