@@ -1,4 +1,7 @@
 HelpMePlay | 1.1.2
 	Fixes and Updates:
+		- Restored the previous behavior for Threads of Fate automation. If the player disables the feature, the addon will opt them into Story Mode.
+		- Updated the settings descriptions to more accurately reflect their latest capabilities.
 		- Updated the Mail automation to also collect items (in addition to gold.)
+		- Updated the rules for purchasing skills from trainers. Players need only 50 gold more than the cost now.
 		- Removed the quest icon feature.
